# QRGenerator_diploma_

./: CMakeLists.txt  qr_handler.cpp
